style(footer): fix spacing and menu

--- a/src/components/Footer/components/FooterMenu/footer-menu.module.less
+++ b/src/components/Footer/components/FooterMenu/footer-menu.module.less
@@ -1,7 +1,7 @@
 .container {
   // background-color: salmon;
 
-  margin: 24px 400px 0;
+  margin: 24px 320px 0;
   display: flex;
   flex-grow: 2;
   justify-content: space-around;
@@ -14,21 +14,28 @@
       display: flex;
       flex-direction: column;
       text-align: center;
+      margin: 0 10px;
+
+      font-size: 12px;
+
+      // use global variable
+      color: #333A54;
 
       > .main {
         // border: 1px solid green;
+        white-space: nowrap;
+        text-transform: uppercase;
       }
 
       > .sub {
         // border: 1px solid purple;
         text-transform: capitalize;
-        font-size: 10px;
+        margin-top: 6px;
       }
     }
 
     a {
       text-decoration: none;
-      text-transform: uppercase;
     }
   }
 }
